--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,6 +6,24 @@
   --green: #2fc022;
 }
 
+* {
+  font-family: "Gotham";
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+
+body {
+  width: 100%;
+  height: 100%;
+}
+
+.container {
+  margin: 0 auto;
+  max-width: 1120px;
+  width: 100%;
+}
+
 @font-face {
   font-family: "Gotham";
   src: url("assets/fonts/Gotham/gotham-light.woff2") format("truetype");
