feat: add units cards section

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,8 @@
 <app-header></app-header>
-<app-forms></app-forms>
+<app-forms (submitEvent)="onSubmit()"></app-forms>
+<app-hygiene-list-items></app-hygiene-list-items>
+<app-cards-list
+  *ngIf="showList | async"
+  [unitsList]="unitsList"
+></app-cards-list>
+<app-footer></app-footer>
