--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,8 @@
 :root {
   --dark-grey: #333333;
+  --footer-grey: #535353;
   --light-grey: #808080;
+  --light-bg-grey: #eceaea8c;
   --light-text: #e5e5e5;
   --medium-text: #939393;
   --yellow: #ffb612;
