feat: finished responsive layout

--- a/src/app/components/cards-list/cards-list.component.html
+++ b/src/app/components/cards-list/cards-list.component.html
@@ -1,7 +1,9 @@
-<div class="container">
-  <ul>
-    <li *ngFor="let card of unitsList">
-      <app-card [card]="card"></app-card>
-    </li>
-  </ul>
-</div>
+<section>
+  <div class="container">
+    <ul>
+      <li *ngFor="let card of unitsList">
+        <app-card [card]="card"></app-card>
+      </li>
+    </ul>
+  </div>
+</section>
