--- a/src/app/components/hygiene-list-items/hygiene-list-items.component.html
+++ b/src/app/components/hygiene-list-items/hygiene-list-items.component.html
@@ -1,81 +1,86 @@
-<div class="container">
-  <div class="hygiene-list">
-    <div class="hygiene-group">
-      <h3>Máscara</h3>
-      <div class="grid">
-        <div class="single-mask">
-          <img src="/assets/images/icons/required-mask.png" alt="icon-mask" />
-          <p>Obrigatório</p>
-        </div>
-        <div class="single-mask">
-          <img
-            src="/assets/images/icons/recommended-mask.png"
-            alt="icon-mask"
-          />
-          <p>Recomendado</p>
-        </div>
-      </div>
-    </div>
-    <div class="hygiene-group">
-      <h3>Toalha</h3>
-      <div class="grid">
-        <div class="single-mask">
-          <img src="/assets/images/icons/required-towel.png" alt="icon-towel" />
-          <p>Obrigatório</p>
-        </div>
-        <div class="single-mask">
-          <img
-            src="/assets/images/icons/recommended-towel.png"
-            alt="icon-towel"
-          />
-          <p>Recomendado</p>
+<section>
+  <div class="container">
+    <div class="hygiene-list">
+      <div class="hygiene-group">
+        <h3>Máscara</h3>
+        <div class="grid">
+          <div class="single-mask">
+            <img src="/assets/images/icons/required-mask.png" alt="icon-mask" />
+            <p>Obrigatório</p>
+          </div>
+          <div class="single-mask">
+            <img
+              src="/assets/images/icons/recommended-mask.png"
+              alt="icon-mask"
+            />
+            <p>Recomendado</p>
+          </div>
         </div>
       </div>
-    </div>
-    <div class="hygiene-group">
-      <h3>Toalha</h3>
-      <div class="grid">
-        <div class="single-mask">
-          <img
-            src="/assets/images/icons/partial-fountain.png"
-            alt="icon-fountain"
-          />
-          <p>Parcial</p>
-        </div>
-        <div class="single-mask">
-          <img
-            src="/assets/images/icons/not_allowed-fountain.png"
-            alt="icon-fountain"
-          />
-          <p>Proibido</p>
+      <div class="hygiene-group">
+        <h3>Toalha</h3>
+        <div class="grid">
+          <div class="single-mask">
+            <img
+              src="/assets/images/icons/required-towel.png"
+              alt="icon-towel"
+            />
+            <p>Obrigatório</p>
+          </div>
+          <div class="single-mask">
+            <img
+              src="/assets/images/icons/recommended-towel.png"
+              alt="icon-towel"
+            />
+            <p>Recomendado</p>
+          </div>
         </div>
       </div>
-    </div>
-    <div class="hygiene-group">
-      <h3>Vestiários</h3>
-      <div class="grid-locker-room">
-        <div class="single-mask">
-          <img
-            src="/assets/images/icons/allowed-locker_room.png"
-            alt="icon-locker_room"
-          />
-          <p>Liberado</p>
+      <div class="hygiene-group">
+        <h3>Toalha</h3>
+        <div class="grid">
+          <div class="single-mask">
+            <img
+              src="/assets/images/icons/partial-fountain.png"
+              alt="icon-fountain"
+            />
+            <p>Parcial</p>
+          </div>
+          <div class="single-mask">
+            <img
+              src="/assets/images/icons/not_allowed-fountain.png"
+              alt="icon-fountain"
+            />
+            <p>Proibido</p>
+          </div>
         </div>
-        <div class="single-mask">
-          <img
-            src="/assets/images/icons/partial-locker_room.png"
-            alt="icon-locker_room"
-          />
-          <p>Parcial</p>
-        </div>
-        <div class="single-mask">
-          <img
-            src="/assets/images/icons/closed-locker_room.png"
-            alt="icon-locker_room"
-          />
-          <p>Fechado</p>
+      </div>
+      <div class="hygiene-group">
+        <h3>Vestiários</h3>
+        <div class="grid-locker-room">
+          <div class="single-mask">
+            <img
+              src="/assets/images/icons/allowed-locker_room.png"
+              alt="icon-locker_room"
+            />
+            <p>Liberado</p>
+          </div>
+          <div class="single-mask">
+            <img
+              src="/assets/images/icons/partial-locker_room.png"
+              alt="icon-locker_room"
+            />
+            <p>Parcial</p>
+          </div>
+          <div class="single-mask">
+            <img
+              src="/assets/images/icons/closed-locker_room.png"
+              alt="icon-locker_room"
+            />
+            <p>Fechado</p>
+          </div>
         </div>
       </div>
     </div>
   </div>
-</div>
+</section>
