--- a/src/app/components/hygiene-list-items/hygiene-list-items.component.scss
+++ b/src/app/components/hygiene-list-items/hygiene-list-items.component.scss
@@ -42,13 +42,13 @@ img {
   }
 
   .grid {
-    grid-template-columns: 25% 25%;
+    grid-template-columns: 40% 40%;
     justify-content: center;
   }
 
   .grid-locker-room {
     display: grid;
-    grid-template-columns: 20% 20% 20%;
+    grid-template-columns: 33% 33% 33%;
     justify-content: center;
   }
 
@@ -59,5 +59,36 @@ img {
   .hygiene-group:nth-child(3),
   .hygiene-group:nth-child(4) {
     margin-bottom: 0;
+  }
+}
+
+@media (max-width: 768px) {
+  .grid {
+    grid-template-columns: 50% 50%;
+    justify-content: center;
+  }
+
+  .grid-locker-room {
+    display: grid;
+    grid-template-columns: 33% 33% 33%;
+    justify-content: center;
+  }
+}
+
+@media (max-width: 575px) {
+  .hygiene-list {
+    grid-template-columns: 100%;
+  }
+
+  .hygiene-group:nth-child(3) {
+    margin-bottom: 30px;
+  }
+
+  img {
+    width: 60px;
+  }
+
+  p {
+    font-size: 14px;
   }
 }
